--- a/local.properties
+++ b/local.properties
@@ -7,5 +7,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Wed Jan 21 21:00:14 BRST 2015
-sdk.dir=C\:\\Users\\Daniel\\AppData\\Local\\Android\\sdk
+#Wed Jan 21 22:55:53 GMT-03:00 2015
+sdk.dir=C\:\\Users\\doisl_000\\AppData\\Local\\Android\\sdk
